<resources>
    <string name="app_name">Connect Sample</string>
    <string name="identify_user">Identify User</string>
    <string name="track_event">Track Event</string>
    <string name="register_for_push">Register for push</string>
    <string name="disable_push">Disable push</string>
    <string name="logout">Logout</string>
    <string name="missing_credentials">You must provide a Connect API key and valid Firebase credentials for this demo app to function correctly</string>

    <!-- Overriding Connect notification channel IDs -->
    <string name="connect_notification_channel_id">connect_demo_notification_channel</string>
    <string name="connect_notification_channel_name">Connect Demo Default Notification Channel</string>

    <string name="connect_silent_notification_channel_id">connect_demo_silent_notification_channel</string>
    <string name="connect_silent_notification_channel_name">Connect Demo Silent Notification Channel</string>

</resources>
